# personal_financial_app/backend/finance_api/models/__init__.py
@@ -10,10 +10,12 @@ from .debts import Debt
 from .snapshots import FinancialSnapshot
 from .settings import UserSetting, CustomType, CustomCategory, Choice
 from .currency import Currency, ExchangeRate
+from .patrimony import Asset
 
 __all__ = [
     'Currency',
     'ExchangeRate',
+    'Asset',
     'FinancialRecord',
     'ExpectedGoal',
     'BankStatement',
